# notizen_py_qt

./: PORTING_NOTES.md  QT611_MIGRATION_ACTIONS.md  QT611_MIGRATION_STATUS.md  QT611_PYTHON_QT_MIGRATION_ACTIONS.md  README.md  pyproject.toml
Notizen_py_qt/: Notizen PyQt.desktop  Notizen starten.cmd  Notizen starten.sh  QT611_MIGRATION_STATUS.md  README.md  TRANSPILE_NET_TO_PYQT_REPORT.md  TRANSPILE_NET_TO_PYQT_REPORT_0.10.0.md  TRANSPILE_NET_TO_PYQT_REPORT_0.10.10.md  TRANSPILE_NET_TO_PYQT_REPORT_0.10.12.md  TRANSPILE_NET_TO_PYQT_REPORT_0.10.14.md  TRANSPILE_NET_TO_PYQT_REPORT_0.10.16.md  TRANSPILE_NET_TO_PYQT_REPORT_0.10.19.md  TRANSPILE_NET_TO_PYQT_REPORT_0.10.2.md  TRANSPILE_NET_TO_PYQT_REPORT_0.10.20.md  TRANSPILE_NET_TO_PYQT_REPORT_0.10.21.md  TRANSPILE_NET_TO_PYQT_REPORT_0.10.22.md  TRANSPILE_NET_TO_PYQT_REPORT_0.10.23.md  TRANSPILE_NET_TO_PYQT_REPORT_0.10.25.md  TRANSPILE_NET_TO_PYQT_REPORT_0.10.26.md  TRANSPILE_NET_TO_PYQT_REPORT_0.10.3.md  TRANSPILE_NET_TO_PYQT_REPORT_0.10.4.md  TRANSPILE_NET_TO_PYQT_REPORT_0.10.5.md  TRANSPILE_NET_TO_PYQT_REPORT_0.10.6.md  TRANSPILE_NET_TO_PYQT_REPORT_0.10.7.md  TRANSPILE_NET_TO_PYQT_REPORT_0.10.8.md  TRANSPILE_NET_TO_PYQT_REPORT_0.9.5.md  TRANSPILE_NET_TO_PYQT_REPORT_0.9.6.md  TRANSPILE_NET_TO_PYQT_REPORT_0.9.7.md  TRANSPILE_NET_TO_PYQT_REPORT_0.9.8.md  TRANSPILE_NET_TO_PYQT_REPORT_0.9.9.md  VALIDATION_NET_PORT.md  VALIDATION_NET_PORT_0.10.0.md  VALIDATION_NET_PORT_0.10.10.md  VALIDATION_NET_PORT_0.10.12.md  VALIDATION_NET_PORT_0.10.13.md  VALIDATION_NET_PORT_0.10.14.md  VALIDATION_NET_PORT_0.10.16.md  VALIDATION_NET_PORT_0.10.19.md  VALIDATION_NET_PORT_0.10.2.md  VALIDATION_NET_PORT_0.10.20.md  (+22 more)
Notizen_py_qt/docs/: MAPPING.md  PROJECT_CONTEXT_IMPORTED.md
Notizen_py_qt/examples/: main_window.slint
Notizen_py_qt/legacy_build_metadata/active_root_archived_0.9.8/: QT611_QML_ENGINE_REPAIR.md  VALIDATION_V6.md  VALIDATION_V7.md
Notizen_py_qt/legacy_build_metadata/qt611_migration_kit/: CMakeLists.qt611.generated.txt
Notizen_py_qt/notizen_py_qt/: __init__.py
Notizen_py_qt/scripts/: analyze_transpilation.py  build_linux_appdir.sh  build_python_qt.sh  build_qt611.sh  check_no_slint.sh  check_no_slint_strict.sh  continue_qt611_transpile.py  finish_python_qt_migration.py  install_linux_launcher.sh  install_windows_file_association.ps1  migrate_remove_slint_to_qt611.py  package_zip.py  probe_python_qt_runtime.py  qml_sanity_check.py  qt611_project_utils.py  repair_qml_todo_blocks.py  restore_qt_controller_from_backup.py  slint_to_qml.py  uninstall_linux_launcher.sh  validate_legacy_alx.py  verify_qt611_environment.sh
Notizen_py_qt/src/notizen_py_qt/: __init__.py  alarms.py  alx_io.py  app.py  desktop_note_legacy.py  display_env.py  editor_legacy.py  exporters.py  feedback.py  ftp_sync.py  html_export.py  i18n.py  keyboard_legacy.py  legacy_colors.py  legacy_paths.py  legacy_validation.py  models.py  node_clipboard.py  qt_compat.py  rtf_utils.py  search_logic.py  search_results.py  settings.py  startup.py  stats.py  system_integration.py  tray_support.py  window_visibility.py
Notizen_py_qt/template_cpp_qml/: CMakeLists.txt
Notizen_py_qt/template_rust_cxx_qt/: CMakeLists.txt  Cargo.toml  build.rs
Notizen_py_qt/template_rust_cxx_qt/cpp/: main.cpp
Notizen_py_qt/template_rust_cxx_qt/qml/: Main.qml
Notizen_py_qt/template_rust_cxx_qt/src/: backend.rs
Notizen_py_qt/tests/: test_alx_io.py  test_alx_roundtrip_1021.py  test_alx_roundtrip_attrs_1014.py  test_alx_tree_expansion_1020.py  test_backup_management_099.py  test_desktop_menu_regressions_1016.py  test_desktop_note_autoresize_1019.py  test_desktop_note_winforms_1015.py  test_desktop_rtf_print_layout_1023.py  test_desktop_rtf_transparency_toolbar_1024.py  test_display_env_1011.py  test_feedback_help_1018.py  test_finish_python_qt_migration.py  test_ftp_integration_1018.py  test_gnome_shell_start_1012.py  test_gnome_visible_start_1010.py  test_html_stats_import_097.py  test_launchers_1017.py  test_launchers_103.py  test_legacy_alx_fixtures_1013.py  test_legacy_behaviour_094.py  test_legacy_config_passthrough_1016.py  test_legacy_config_rtf_1013.py  test_legacy_drag_startup_bullet_108.py  test_legacy_keyboard_1013.py  test_legacy_languages_1013.py  test_legacy_new_next_colors_107.py  test_legacy_paths_desktop_101.py  test_legacy_ui_source_096.py  test_legacy_ui_source_097.py  test_legacy_ui_source_098.py  test_legacy_ui_source_099.py  test_legacy_ui_source_109.py  test_legacy_validation_1014.py  test_node_clipboard_alarms.py  test_recent_desktop_1013.py  test_repair_pyproject_qt611.py  test_richtext_export_settings.py  test_rtf_bmp_legacy_109.py  test_rtf_codepage_1014.py  (+14 more)
Notizen_py_qt/tests/fixtures/: legacy_sanitized_desktop.alx  legacy_unbenannt.alx
Notizen_py_qt/transpiled_examples/: MainWindow.qml  advanced_app.slint_to_qml.report.json  main_window.slint_to_qml.report.json
Notizen_py_slint/: PORTING_NOTES.md  QT611_CONTINUE_TRANSPILE_REPORT.md  QT611_CONTROLLER_RESTORE.md  QT611_MIGRATION_STATUS.md  QT611_MISROOT_RECOVERY.md  QT611_PYTHON_QT_MIGRATION_ACTIONS.md  QT611_QML_ENGINE_REPAIR.md  QT611_QML_HARDENING.md  QT611_QML_TODO_REPAIR.md  QT611_RUNTIME_HARDENING.md  README.md  pyproject.toml
Notizen_py_slint/.qt611_controller_restore_backup/20260430-095217/: QT611_CONTROLLER_RESTORE.md
Notizen_py_slint/.qt611_no_slint_backup_v4/20260429-212035/: QT611_MIGRATION_ACTIONS.md  README.md  pyproject.toml
Notizen_py_slint/.qt611_no_slint_backup_v4/20260430-095205/: QT611_MISROOT_RECOVERY.md  QT611_PYTHON_QT_MIGRATION_ACTIONS.md
Notizen_py_slint/.qt611_no_slint_backup_v4/20260430-095216/: QT611_CONTINUE_TRANSPILE_REPORT.md  QT611_CONTROLLER_RESTORE.md  QT611_MIGRATION_STATUS.md  QT611_PYTHON_QT_MIGRATION_ACTIONS.md  QT611_QML_TODO_REPAIR.md  QT611_RUNTIME_HARDENING.md
Notizen_py_slint/.qt611_qml_hardening_backup/20260430-095217/: QT611_QML_HARDENING.md
Notizen_py_slint/qml/: advanced_app.slint_to_qml.report.json  main_window_MainWindow.qml  qmldir
Notizen_py_slint/scripts/: build_python_qt.sh  check_no_slint.sh  run-gui.sh
qml/: app-window.slint_to_qml.report.json  (+1 more)
(+198 files in other folders)
