[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "notizen-py-qt"
version = "0.9.3"
description = "Python/Qt continuation port of the legacy Notizen.NET WinForms note tree application."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL-3.0-or-later"}
authors = [{name = "Notizen.NET migration"}]
dependencies = [
    "PySide6>=6.6,<7",
]

[project.optional-dependencies]
crypto = ["pycryptodome>=3.20"]
dev = ["pytest>=8"]

[project.scripts]
notizen-py-qt = "notizen_py_qt.app:main"
notizen-pyqt = "notizen_py_qt.app:main"

[tool.setuptools.packages.find]
where = ["src"]


[tool.setuptools.package-data]
notizen_py_qt = ["resources/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
