[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "notizen-py-qt"
version = "0.19.0"
description = "Python/Qt port of the old VB.NET Notizen.NET application"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "Transcompiled from Notizen.NET" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: X11 Applications",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Office/Business",
]

dependencies = [
    "PySide6>=6.11,<6.12",
]


[project.optional-dependencies]
dev = []

[project.scripts]
# Compatibility entry point for old installs. Prefer notizen-py-qt.

notizen-py-qt = "notizen_py_qt.app:main"
notizen-alx = "notizen_py_qt.cli:main"
notizen-pypy-qt = "notizen_pypy_qt.app:main"
[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
notizen_py_qt = ["ui/*.qml", "ui/*.js"]
"notizen_py_qt.ui" = ["*.qml", "*.js"]
