[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "notizen-py-slint"
version = "0.19.0"
description = "Python/Slint port of the old VB.NET Notizen.NET application"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "Transcompiled from Notizen.NET" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: X11 Applications",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Office/Business",
]

dependencies = []

[project.optional-dependencies]
slint = ["slint>=1.8.0a1"]
dev = []

[project.scripts]
notizen-py-slint = "notizen_py_slint.app:main"
notizen-alx = "notizen_py_slint.cli:main"
# Compatibility entry point for old installs. Prefer notizen-py-slint.
notizen-pypy-slint = "notizen_pypy_slint.app:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
notizen_py_slint = ["ui/*.slint"]
"notizen_py_slint.ui" = ["*.slint"]
